force-app/main/default/objects/Dienstgebied__c/Dienstgebied__c.object-meta.xml
<CustomObject>
    <label>Dienst</label>
    <nameField>
        <label>Naam van Dienst</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diensten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>