force-app/main/default/objects/Dienstgebied__c/fields/Minimale_prijs__c.field-meta.xml
<CustomField>
    <fullName>Minimale_prijs__c</fullName>
    <description>Used to determine if product needs minimum pricing</description>
    <label>Minimale prijs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>