force-app/main/default/objects/Dienstgebied__c/fields/Opmerkingen__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen__c</fullName>
    <label>Opmerkingen</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>