force-app/main/default/objects/Dienstgebied__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>